--- a/package.json
+++ b/package.json
@@ -3,15 +3,29 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "0.18.0",
     "dotenv": "5.0.1",
+    "moment": "^2.22.0",
+    "prop-types": "^15.6.1",
     "react": "16.3.1",
+    "react-bootstrap": "^0.32.1",
     "react-dom": "16.3.1",
-    "react-scripts": "1.1.4"
+    "react-loader": "^2.4.3",
+    "react-scripts": "1.1.4",
+    "react-select": "^1.2.1",
+    "react-virtualized-select": "^3.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "eslint": "4.19.1",
+    "eslint-config-airbnb": "16.1.0",
+    "eslint-plugin-import": "2.10.0",
+    "eslint-plugin-jsx-a11y": "6.0.3",
+    "eslint-plugin-react": "7.7.0"
   }
 }
