--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "0.18.0",
+    "bootstrap": "3",
     "dotenv": "5.0.1",
     "moment": "^2.22.0",
     "prop-types": "^15.6.1",
