--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "dependencies": {
     "axios": "0.18.0",
     "bootstrap": "3",
-    "dotenv": "5.0.1",
+    "dotenv": "4.0.0",
+    "dotenv-safe": "^5.0.1",
     "moment": "^2.22.0",
     "prop-types": "^15.6.1",
     "react": "16.3.1",
