--- a/package.json
+++ b/package.json
@@ -7,15 +7,15 @@
     "bootstrap": "3",
     "dotenv": "4.0.0",
     "dotenv-safe": "^5.0.1",
-    "moment": "^2.22.0",
-    "prop-types": "^15.6.1",
+    "moment": "2.22.0",
+    "prop-types": "15.6.1",
     "react": "16.3.1",
-    "react-bootstrap": "^0.32.1",
+    "react-bootstrap": "0.32.1",
     "react-dom": "16.3.1",
-    "react-loader": "^2.4.3",
+    "react-loader": "2.4.3",
     "react-scripts": "1.1.4",
-    "react-select": "^1.2.1",
-    "react-virtualized-select": "^3.1.3"
+    "react-select": "1.2.1",
+    "react-virtualized-select": "3.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -27,13 +27,13 @@
     "lint-fix": "eslint . --fix"
   },
   "devDependencies": {
-    "eslint": "^4.19.1",
-    "eslint-config-airbnb": "^16.1.0",
-    "eslint-config-prettier": "^2.9.0",
-    "eslint-plugin-import": "^2.10.0",
-    "eslint-plugin-jsx-a11y": "^6.0.3",
-    "eslint-plugin-prettier": "^2.6.0",
-    "eslint-plugin-react": "^7.7.0",
-    "prettier": "^1.11.1"
+    "eslint": "4.19.1",
+    "eslint-config-airbnb": "16.1.0",
+    "eslint-config-prettier": "2.9.0",
+    "eslint-plugin-import": "2.10.0",
+    "eslint-plugin-jsx-a11y": "6.0.3",
+    "eslint-plugin-prettier": "2.6.0",
+    "eslint-plugin-react": "7.7.0",
+    "prettier": "1.11.1"
   }
 }
