--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "eslint-plugin-jsx-a11y": "6.0.3",
     "eslint-plugin-prettier": "2.6.0",
     "eslint-plugin-react": "7.7.0",
-    "prettier": "1.11.1"
+    "prettier": "1.11.1",
+    "react-test-renderer": "16.3.2"
   }
 }
