--- a/.eslintrc
+++ b/.eslintrc
@@ -14,7 +14,18 @@
     "jest": true,
     "node": true
   },
+  "settings": {
+    "import/resolver": {
+      "node": {
+        "paths": [
+          "src"
+        ]
+      }
+    }
+  },
   "rules": {
+    "import/extensions": "off",
+    "import/no-unresolved": "off",
     "react/jsx-filename-extension": [
       1,
       {
