--- a/package.json
+++ b/package.json
@@ -26,19 +26,21 @@
     "lint": "eslint .",
     "lint-fix": "eslint . --fix",
     "cypress-run": "cypress run",
-    "cypress-open": "cypress open"
+    "cypress-open": "cypress open",
+    "cypress-run-docker": "start-server-and-test start http://localhost:3000 cypress-run"
   },
   "devDependencies": {
     "cypress": "2.1.0",
     "eslint": "4.19.1",
     "eslint-config-airbnb": "16.1.0",
     "eslint-config-prettier": "2.9.0",
-    "eslint-plugin-cypress": "^2.0.1",
+    "eslint-plugin-cypress": "2.0.1",
     "eslint-plugin-import": "2.10.0",
     "eslint-plugin-jsx-a11y": "6.0.3",
     "eslint-plugin-prettier": "2.6.0",
     "eslint-plugin-react": "7.7.0",
     "prettier": "1.11.1",
-    "react-test-renderer": "16.3.2"
+    "react-test-renderer": "16.3.2",
+    "start-server-and-test": "1.4.1"
   }
 }
